# foo-to-delete

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/main/cpp/src/: foo.cpp
libs/: CMakeLists.txt
libs/lib1/: CMakeLists.txt
libs/lib1/src/main/cpp/include/: bar.hpp
libs/lib1/src/main/cpp/src/: bar.cpp
libs/lib1/src/test/: CMakeLists.txt
libs/lib1/src/test/cpp/src/: basic_test.cpp
libs/lib2/: CMakeLists.txt
libs/lib2/src/main/cpp/include/: baz.hpp
libs/lib2/src/main/cpp/src/: baz.cpp
libs/lib2/src/test/: CMakeLists.txt
libs/lib2/src/test/cpp/src/: basic_test.cpp
